--- a/exercicio.biblioteca/compose.yaml
+++ b/exercicio.biblioteca/compose.yaml
@@ -1,10 +1,9 @@
 services:
+
   mysql:
-    image: 'mysql:latest'
-    environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+    image: mysql:8.0.32
+    restart: always
     ports:
-      - '3306'
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: root
