--- a/exercicio.biblioteca/src/main/resources/application.properties
+++ b/exercicio.biblioteca/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=exercicio.biblioteca
+# Configuracao do DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/bibliotecadb?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Configuracao do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Configuracao da JPA
+spring.jpa.show-sql=true
